--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -4,6 +4,9 @@ on:
   repository_dispatch:
     types: [update-readme]
 
+permissions:
+  contents: write
+  
 jobs:
   run-script:
     runs-on: ubuntu-latest
