--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.ABDBBDII_README }}
 
           user: kaleabAlemayehu
           template: classic
