--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -22,16 +22,16 @@ jobs:
           base: ""
           filename: assets/gen/metrics.svg
 
-          plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_sections: most-used, recently-used
+          # plugin_languages: yes
+          # plugin_languages_analysis_timeout: 15
+          # plugin_languages_sections: most-used, recently-used
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_ignored: css, jupyter notebook, html
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 1000
+          # plugin_languages_limit: 8
+          # plugin_languages_recent_categories: markup, programming
+          # plugin_languages_recent_days: 14
+          # plugin_languages_recent_load: 1000
           plugin_languages_threshold: 0%
           plugin_languages_indepth: yes
           commits_authoring: Abdul Rahman, abdbbdii, abdulrahman.abd.dev@gmail.com
