--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -24,16 +24,13 @@ jobs:
 
           plugin_languages: yes
           # plugin_languages_ignored: css, jupyter notebook, html
-          plugin_languages_sections: most-used, recently-used
+          plugin_languages_sections: most-used
           plugin_languages_details: lines, percentage, bytes-size
-          plugin_languages_limit: 8
+          plugin_languages_limit: 10
           plugin_languages_indepth: yes
-          plugin_languages_analysis_timeout: 30
+          plugin_languages_analysis_timeout: 120
           commits_authoring: Abdul Rahman, abdbbdii, abdbbdii@users.noreply.github.com
+          plugin_languages_threshold: 0%
           # plugin_languages_colors: github
           # plugin_languages_categories: markup, programming
-          # plugin_languages_recent_categories: markup, programming
-          # plugin_languages_recent_days: 14
-          # plugin_languages_recent_load: 1000
-          # plugin_languages_threshold: 0%
-          # plugin_languages_other: no
+          plugin_languages_other: yes
