--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -23,14 +23,13 @@ jobs:
           filename: assets/gen/metrics.svg
 
           plugin_languages: yes
-          # plugin_languages_ignored: css, jupyter notebook, html
+          plugin_languages_ignored: css, tsql, html
           plugin_languages_sections: most-used
           plugin_languages_details: lines, percentage, bytes-size
-          plugin_languages_limit: 10
           plugin_languages_indepth: yes
           plugin_languages_analysis_timeout: 120
           commits_authoring: Abdul Rahman, abdbbdii, abdbbdii@users.noreply.github.com
           plugin_languages_threshold: 0%
           # plugin_languages_colors: github
-          # plugin_languages_categories: markup, programming
-          plugin_languages_other: yes
+          plugin_languages_categories: markup, programming
+          # plugin_languages_other: yes
