--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -23,13 +23,14 @@ jobs:
           filename: assets/gen/metrics.svg
 
           plugin_languages: yes
-          plugin_languages_ignored: css, tsql, html
+          # plugin_languages_ignored: css, tsql, html
           plugin_languages_sections: most-used
           plugin_languages_details: lines, percentage, bytes-size
           plugin_languages_indepth: yes
-          plugin_languages_analysis_timeout: 120
+          plugin_languages_analysis_timeout: 60
+          plugin_languages_analysis_timeout_repositories: 15
           commits_authoring: Abdul Rahman, abdbbdii, abdbbdii@users.noreply.github.com
           plugin_languages_threshold: 0%
-          # plugin_languages_colors: github
           plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
           # plugin_languages_other: yes
