--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -33,4 +33,5 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
+          plugin_languages_recent_days: 365
           # plugin_languages_other: yes
