--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -1,10 +1,8 @@
 name: Update GitHub Metrics
 on:
-  # Schedule updates (each day)
-  # schedule: [{cron: "5 0/4 * * *"}]
-  # Lines below let you run workflow manually and on each commit
+  schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
-  push: { branches: ["master", "main"] }
+  # push: { branches: ["master", "main"] }
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
