--- a/.github/workflows/matrices-anilist.yaml
+++ b/.github/workflows/matrices-anilist.yaml
@@ -23,5 +23,5 @@ jobs:
           plugin_anilist: yes
           plugin_anilist_user: abdman01
           plugin_anilist_medias: anime
-          plugin_anilist_sections: favorites, watching
-          plugin_anilist_limit: 100
+          plugin_anilist_sections: favorites
+          plugin_anilist_limit: 6
