--- a/.github/workflows/matrices-anilist.yaml
+++ b/.github/workflows/matrices-anilist.yaml
@@ -21,7 +21,7 @@ jobs:
           base: ""
 
           plugin_anilist: yes
-          plugin_anilist_user: abdbbdii
+          plugin_anilist_user: abdxdev
           plugin_anilist_medias: anime
           plugin_anilist_sections: favorites
           plugin_anilist_limit: 2
