--- a/.github/workflows/metrics-languages.yaml
+++ b/.github/workflows/metrics-languages.yaml
@@ -1,6 +1,8 @@
 name: Update GitHub Metrics Languages
 on:
-  schedule: [{cron: "0 0 * * *"}]
+  schedule:
+    - cron: "0 0 * * *"
+    
   workflow_dispatch:
   # push: { branches: ["master", "main"] }
 jobs:
