--- a/.github/workflows/matrices-anilist.yaml
+++ b/.github/workflows/matrices-anilist.yaml
@@ -1,7 +1,9 @@
 name: Update GitHub Metrics Anilist
 
 on:
-  schedule: [{cron: "0 0 * * *"}]
+  schedule:
+    - cron: "0 0 * * *"
+
   workflow_dispatch:
   
 jobs:
